--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
-  text-align: center;
+.header{
+  display : flex;
+  flex-direction : row;
+  justify-content : space-around;
+  align-items : center;
+  background-color : #FBF8EE;
+  margin-bottom : 50px;
+  height: 100px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header__right{
+  display : flex;
+  margin-top : 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header__left__menu{
+  font-size : 25px;
+  color : #9C847B;
+  font-weight : bold;
+  font-family : Fantasy;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header__right__menu{
+  font-size : 18px;
+  color : #9C847B;
+  cursor : pointer;
+  margin-left : 20px;
+  font-family : Fantasy;
 }
 
-.App-link {
-  color: #61dafb;
+.main{
+  height : 70%;
+  width : 100%;
+  display : flex;
+  flex-direction : column;
+  justify-content : center;
+  align-items : center;
+  margin-bottom : 50px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main__card{
+  width :  850px;
+  height : 550px;
+  background-color : white;
+  box-shadow : 0px 0px 10px 1px gray;
+  margin-bottom : 50px;
+}
+
+.main__prev{
+  width : 850px;
+  height : 250px;
+  box-shadow : 0px 0px 10px 1px gray;
 }
