--- a/src/App.css
+++ b/src/App.css
@@ -1,53 +1,28 @@
-.header{
+body{
+  width : 100vw;
+  height : 100vh;
   display : flex;
-  flex-direction : row;
-  justify-content : space-around;
-  align-items : center;
-  background-color : #FBF8EE;
-  margin-bottom : 50px;
-  height: 100px;
-}
-
-.header__right{
-  display : flex;
-  margin-top : 5px;
-}
-
-.header__left__menu{
-  font-size : 25px;
-  color : #9C847B;
-  font-weight : bold;
-  font-family : Fantasy;
-}
-
-.header__right__menu{
-  font-size : 18px;
-  color : #9C847B;
-  cursor : pointer;
-  margin-left : 20px;
-  font-family : Fantasy;
 }
 
 .main{
-  height : 70%;
+  height : 700px;
   width : 100%;
   display : flex;
   flex-direction : column;
   justify-content : center;
   align-items : center;
-  margin-bottom : 50px;
 }
 
 .main__card{
   width :  850px;
   height : 550px;
   background-color : white;
-  box-shadow : 0px 0px 10px 1px gray;
+/*   box-shadow : 0px 0px 10px 1px gray; */
   margin-bottom : 50px;
 }
 
 .main__prev{
   width : 850px;
   height : 250px;
-  box-shadow : 0px 0px 10px 1px gray;
+/*   box-shadow : 0px 0px 10px 1px gray; */
 }
