--- a/src/components/board/Board.css
+++ b/src/components/board/Board.css
@@ -3,21 +3,66 @@
 }
 
 .board__box{
-  box-shadow : 0px 0px 10px 1px gray;
+  border : 1px solid;
 }
 
 .board__menu{
   display : flex;
-  flex-direction : column;
+  width : 300px;
+  height : 550px;
+  flex-direction : row;
   align-items : flex-start;
+  background-color : white;
+  border : 1px solid;
 }
+
+.board__menu__buttonBox{
+  display : flex;
+  flex-direction : column;
+  height : 550px;
+  background-color : black;
+}
+
+.board__menu__buttonBox__button{
+  width : 75px;
+  height : 75px;
+  cursor : pointer;
+  border : 0px;
+  background-color : black;
+}
+
+.board__menu__buttonBox__button.selected{
+  background-color : white;
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+}
+
+.board__menu__buttonBox__button__icon{
+  background-color : none;
+  color : white;
+  font-size : 25px;
+}
+
+.board__menu__buttonBox__button__icon.selected{
+  color : black;
+}
+
 
 .board__menu__penSize{
   height : 50px;
 }
 
-.board__menu__draw__colorBox__select{
-  width : 50px;
-  height : 50px;
-  cursor : pointer;
+/* chat gpt */
+
+.board__template {
+  position : relative;
+}
+
+.test {
+  position: absolute;
+  z-index : 2;
+  top: 0;
+  left: 0;
+  width: 100%; /* 캔버스 크기에 맞게 100%의 너비 설정 */
+  height: 100%; /* 캔버스 크기에 맞게 100%의 높이 설정 */
+  /* 추가적인 스타일 설정 */
 }
