--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,19 @@
+html{
+  height : 100%;
+}
+
 body{
   width : 100vw;
   height : 100vh;
   display : flex;
+  flex-direction : row;
+  justify-content : space-between;
+  background-color : #E0D6CB;
 }
 
 .main{
-  height : 700px;
   width : 100%;
+  height : 700px;
   display : flex;
   flex-direction : column;
   justify-content : center;
@@ -14,10 +21,9 @@ body{
 }
 
 .main__card{
-  width :  850px;
+  width :  900px;
   height : 550px;
   background-color : white;
-/*   box-shadow : 0px 0px 10px 1px gray; */
   margin-bottom : 50px;
 }
 
