--- a/src/components/board/property/Design.css
+++ b/src/components/board/property/Design.css
@@ -4,6 +4,7 @@
   display : flex;
   flex-direction : column;
   justify-content : space-between;
+  background-color : white;
 }
 
 .design__type{
@@ -31,7 +32,7 @@
   border : none;
   height : 32px;
   font-size : 16px;
-  border-bottom : 1px solid;
+  border-bottom : 1px gray solid;
 }
 
 .temp__button{
