--- a/src/components/board/property/Design.css
+++ b/src/components/board/property/Design.css
@@ -62,6 +62,7 @@
   margin-top  : 10px;
 }
 
+
 .template1front{
   width: 100px; /* 또는 원하는 크기로 설정 */
   height: 70px;
@@ -69,7 +70,31 @@
   background-size: cover; 
   background-repeat: no-repeat; /* 반복 없음 */
   background-position: center;
-  margin-right : 3px;
+  margin-right : 5px;
+}
+
+.template1front.selected {
+  border: 2px solid #3498db;
+}
+
+.template1back.selected {
+  border: 2px solid #3498db;
+}
+
+.template2front.selected {
+  border: 2px solid #3498db;
+}
+
+.template2back.selected {
+  border: 2px solid #3498db;
+}
+
+.template3front.selected {
+  border: 2px solid #3498db;
+}
+
+.template3back.selected {
+  border: 2px solid #3498db;
 }
 
 .template1back{
@@ -88,7 +113,7 @@
   background-size: cover; 
   background-repeat: no-repeat; /* 반복 없음 */
   background-position: center;
-  margin-right : 3px;
+  margin-right : 5px;
 }
 
 .template2back{
@@ -107,7 +132,7 @@
   background-size: cover; 
   background-repeat: no-repeat; /* 반복 없음 */
   background-position: center;
-  margin-right : 3px;
+  margin-right : 5px;
 }
 
 .template3back{
